--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,42 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 1
+      Filmes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <h1>Simplesmente acontece</h1>
+        <h2>16 de outubro de 2014</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/eYZqUxWc7p5TbnMqrWF9eILyToO.jpg"/>
+        <p>Os jovens britânicos Rosie e Alex são amigos inseparáveis desde a infância, experimentando juntos as dificuldades amorosas, familiares e escolares. Embora exista…</p>
+        <ion-button expand="block" fill="outline">Mais informações...</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <h1>Extraordinário</h1>
+        <h2>13 de novembro de 2017</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/mGoTUHAcma2sY0rQ7iQiFZoPF1R.jpg"/>
+        <p>Auggie Pullman é um garoto que nasceu com uma deformação facial. Pela primeira vez, ele irá frequentar uma escola regular, como qualquer outra criança. No quinto…</p>
+        <ion-button expand="block" fill="outline">Mais informações...</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <h1>O rei Leão</h1>
+        <h2>12 de julho de 2019</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/devZdyPRXMiN8HHiX7Y8s0LLEee.jpg"/>
+        <p>Mufasa é o rei na savana africana, respeitado por outros animais e temido por inimigos. Seu filho, Simba, tem o pai como ídolo e aprendeu com ele sobre o ciclo da…</p>
+        <ion-button expand="block" fill="outline">Mais informações...</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <h1>Operação Cupido</h1>
+        <h2>28 de julho de 1998</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/mgI7suxDm8kmqVbUM0bjvhFHlQq.jpg"/>
+        <p>As gêmeas Hallie e Annie (Lindsay Lohan) foram separadas ainda pequenas. Uma ficou com a mãe, Elizabeth (Natasha Richardson), e outra com o pai, Nicholas (Dennis…</p>
+        <ion-button expand="block" fill="outline">Mais informações...</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
